[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ArcadeScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy00.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemy1.tscn" type="PackedScene" id=3]

[node name="ArcadeScene" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )
Mob1 = ExtResource( 3 )

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="EnemySpawner" type="Node2D" parent="."]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
